Pical/.antlr/picalculusParser.java
// Generated from /home/josteda99/Documents/CompetiveCode/Lenguajes/ProyectoLen/Pical/picalculus.g4 by ANTLR 4.8
import org.antlr.v4.runtime.atn.*;
import org.antlr.v4.runtime.dfa.DFA;
import org.antlr.v4.runtime.*;
import org.antlr.v4.runtime.misc.*;
import org.antlr.v4.runtime.tree.*;
import java.util.List;
import java.util.Iterator;
import java.util.ArrayList;

@SuppressWarnings({"all", "warnings", "unchecked", "unused", "cast"})
public class picalculusParser extends Parser {
	static { RuntimeMetaData.checkVersion("4.8", RuntimeMetaData.VERSION); }

	protected static final DFA[] _decisionToDFA;
	protected static final PredictionContextCache _sharedContextCache =
		new PredictionContextCache();
	public static final int
		Cap=1, Can=2, Var=3, Iff=4, Dot=5, Then=6, Eq=7, Neq=8, Pd=9, Hat=10, 
		Tao=11, Spam=12, Con=13, Plus=14, Crech=15, Par=16, ParA=17, Colon=18, 
		Ws=19, Bcom=20, Com=21;
	public static final int
		RULE_r = 0, RULE_stmt = 1, RULE_write = 2, RULE_read = 3, RULE_process_op = 4, 
		RULE_create_ch = 5, RULE_if_cond = 6, RULE_process_invoc = 7, RULE_parameters = 8, 
		RULE_process_decl = 9, RULE_oper = 10;
	private static String[] makeRuleNames() {
		return new String[] {
			"r", "stmt", "write", "read", "process_op", "create_ch", "if_cond", "process_invoc", 
			"parameters", "process_decl", "oper"
		};
	}
	public static final String[] ruleNames = makeRuleNames();

	private static String[] makeLiteralNames() {
		return new String[] {
			null, null, null, null, "'if'", "'.'", "'then'", "'=='", "'!='", "'::='", 
			"'/'", "'&'", "'!'", "'|'", "'+'", "'#'", null, null, "','"
		};
	}
	private static final String[] _LITERAL_NAMES = makeLiteralNames();
	private static String[] makeSymbolicNames() {
		return new String[] {
			null, "Cap", "Can", "Var", "Iff", "Dot", "Then", "Eq", "Neq", "Pd", "Hat", 
			"Tao", "Spam", "Con", "Plus", "Crech", "Par", "ParA", "Colon", "Ws", 
			"Bcom", "Com"
		};
	}
	private static final String[] _SYMBOLIC_NAMES = makeSymbolicNames();
	public static final Vocabulary VOCABULARY = new VocabularyImpl(_LITERAL_NAMES, _SYMBOLIC_NAMES);

	/**
	 * @deprecated Use {@link #VOCABULARY} instead.
	 */
	@Deprecated
	public static final String[] tokenNames;
	static {
		tokenNames = new String[_SYMBOLIC_NAMES.length];
		for (int i = 0; i < tokenNames.length; i++) {
			tokenNames[i] = VOCABULARY.getLiteralName(i);
			if (tokenNames[i] == null) {
				tokenNames[i] = VOCABULARY.getSymbolicName(i);
			}

			if (tokenNames[i] == null) {
				tokenNames[i] = "<INVALID>";
			}
		}
	}

	@Override
	@Deprecated
	public String[] getTokenNames() {
		return tokenNames;
	}

	@Override

	public Vocabulary getVocabulary() {
		return VOCABULARY;
	}

	@Override
	public String getGrammarFileName() { return "picalculus.g4"; }

	@Override
	public String[] getRuleNames() { return ruleNames; }

	@Override
	public String getSerializedATN() { return _serializedATN; }

	@Override
	public ATN getATN() { return _ATN; }

	String s = "";
	public picalculusParser(TokenStream input) {
		super(input);
		_interp = new ParserATNSimulator(this,_ATN,_decisionToDFA,_sharedContextCache);
	}

	public static class RContext extends ParserRuleContext {
		public TerminalNode EOF() { return getToken(picalculusParser.EOF, 0); }
		public List<StmtContext> stmt() {
			return getRuleContexts(StmtContext.class);
		}
		public StmtContext stmt(int i) {
			return getRuleContext(StmtContext.class,i);
		}
		public RContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_r; }
	}

	public final RContext r() throws RecognitionException {
		RContext _localctx = new RContext(_ctx, getState());
		enterRule(_localctx, 0, RULE_r);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(25);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << Cap) | (1L << Can) | (1L << Iff) | (1L << Tao) | (1L << Spam) | (1L << Par) | (1L << ParA))) != 0)) {
				{
				{
				setState(22);
				stmt();
				}
				}
				setState(27);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			setState(28);
			match(EOF);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class StmtContext extends ParserRuleContext {
		public Process_opContext process_op() {
			return getRuleContext(Process_opContext.class,0);
		}
		public Process_invocContext process_invoc() {
			return getRuleContext(Process_invocContext.class,0);
		}
		public Process_declContext process_decl() {
			return getRuleContext(Process_declContext.class,0);
		}
		public OperContext oper() {
			return getRuleContext(OperContext.class,0);
		}
		public StmtContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_stmt; }
	}

	public final StmtContext stmt() throws RecognitionException {
		StmtContext _localctx = new StmtContext(_ctx, getState());
		enterRule(_localctx, 2, RULE_stmt);
		try {
			setState(34);
			_errHandler.sync(this);
			switch ( getInterpreter().adaptivePredict(_input,1,_ctx) ) {
			case 1:
				enterOuterAlt(_localctx, 1);
				{
				setState(30);
				process_op();
				}
				break;
			case 2:
				enterOuterAlt(_localctx, 2);
				{
				setState(31);
				process_invoc();
				}
				break;
			case 3:
				enterOuterAlt(_localctx, 3);
				{
				setState(32);
				process_decl();
				}
				break;
			case 4:
				enterOuterAlt(_localctx, 4);
				{
				setState(33);
				oper(0);
				}
				break;
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class WriteContext extends ParserRuleContext {
		public TerminalNode Can() { return getToken(picalculusParser.Can, 0); }
		public TerminalNode Hat() { return getToken(picalculusParser.Hat, 0); }
		public TerminalNode Var() { return getToken(picalculusParser.Var, 0); }
		public WriteContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_write; }
	}

	public final WriteContext write() throws RecognitionException {
		WriteContext _localctx = new WriteContext(_ctx, getState());
		enterRule(_localctx, 4, RULE_write);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(36);
			match(Can);
			setState(37);
			match(Hat);
			setState(38);
			match(Var);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ReadContext extends ParserRuleContext {
		public TerminalNode Can() { return getToken(picalculusParser.Can, 0); }
		public List<TerminalNode> Par() { return getTokens(picalculusParser.Par); }
		public TerminalNode Par(int i) {
			return getToken(picalculusParser.Par, i);
		}
		public TerminalNode Var() { return getToken(picalculusParser.Var, 0); }
		public ReadContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_read; }
	}

	public final ReadContext read() throws RecognitionException {
		ReadContext _localctx = new ReadContext(_ctx, getState());
		enterRule(_localctx, 6, RULE_read);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(40);
			match(Can);
			setState(41);
			match(Par);
			setState(42);
			match(Var);
			setState(43);
			match(Par);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Process_opContext extends ParserRuleContext {
		public List<TerminalNode> Cap() { return getTokens(picalculusParser.Cap); }
		public TerminalNode Cap(int i) {
			return getToken(picalculusParser.Cap, i);
		}
		public TerminalNode Con() { return getToken(picalculusParser.Con, 0); }
		public TerminalNode Plus() { return getToken(picalculusParser.Plus, 0); }
		public Process_opContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_process_op; }
	}

	public final Process_opContext process_op() throws RecognitionException {
		Process_opContext _localctx = new Process_opContext(_ctx, getState());
		enterRule(_localctx, 8, RULE_process_op);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(45);
			match(Cap);
			setState(46);
			_la = _input.LA(1);
			if ( !(_la==Con || _la==Plus) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(47);
			match(Cap);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Create_chContext extends ParserRuleContext {
		public List<TerminalNode> Par() { return getTokens(picalculusParser.Par); }
		public TerminalNode Par(int i) {
			return getToken(picalculusParser.Par, i);
		}
		public TerminalNode Crech() { return getToken(picalculusParser.Crech, 0); }
		public TerminalNode Can() { return getToken(picalculusParser.Can, 0); }
		public Create_chContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_create_ch; }
	}

	public final Create_chContext create_ch() throws RecognitionException {
		Create_chContext _localctx = new Create_chContext(_ctx, getState());
		enterRule(_localctx, 10, RULE_create_ch);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(49);
			match(Par);
			setState(50);
			match(Crech);
			setState(51);
			match(Can);
			setState(52);
			match(Par);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class If_condContext extends ParserRuleContext {
		public TerminalNode Iff() { return getToken(picalculusParser.Iff, 0); }
		public List<TerminalNode> Var() { return getTokens(picalculusParser.Var); }
		public TerminalNode Var(int i) {
			return getToken(picalculusParser.Var, i);
		}
		public TerminalNode Then() { return getToken(picalculusParser.Then, 0); }
		public OperContext oper() {
			return getRuleContext(OperContext.class,0);
		}
		public TerminalNode Eq() { return getToken(picalculusParser.Eq, 0); }
		public TerminalNode Neq() { return getToken(picalculusParser.Neq, 0); }
		public If_condContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_if_cond; }
	}

	public final If_condContext if_cond() throws RecognitionException {
		If_condContext _localctx = new If_condContext(_ctx, getState());
		enterRule(_localctx, 12, RULE_if_cond);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(54);
			match(Iff);
			setState(55);
			match(Var);
			setState(56);
			_la = _input.LA(1);
			if ( !(_la==Eq || _la==Neq) ) {
			_errHandler.recoverInline(this);
			}
			else {
				if ( _input.LA(1)==Token.EOF ) matchedEOF = true;
				_errHandler.reportMatch(this);
				consume();
			}
			setState(57);
			match(Var);
			setState(58);
			match(Then);
			setState(59);
			oper(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Process_invocContext extends ParserRuleContext {
		public TerminalNode Cap() { return getToken(picalculusParser.Cap, 0); }
		public List<TerminalNode> Par() { return getTokens(picalculusParser.Par); }
		public TerminalNode Par(int i) {
			return getToken(picalculusParser.Par, i);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public Process_invocContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_process_invoc; }
	}

	public final Process_invocContext process_invoc() throws RecognitionException {
		Process_invocContext _localctx = new Process_invocContext(_ctx, getState());
		enterRule(_localctx, 14, RULE_process_invoc);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(61);
			match(Cap);
			setState(62);
			match(Par);
			setState(63);
			parameters();
			setState(64);
			match(Par);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class ParametersContext extends ParserRuleContext {
		public List<TerminalNode> Can() { return getTokens(picalculusParser.Can); }
		public TerminalNode Can(int i) {
			return getToken(picalculusParser.Can, i);
		}
		public List<TerminalNode> Colon() { return getTokens(picalculusParser.Colon); }
		public TerminalNode Colon(int i) {
			return getToken(picalculusParser.Colon, i);
		}
		public List<TerminalNode> Var() { return getTokens(picalculusParser.Var); }
		public TerminalNode Var(int i) {
			return getToken(picalculusParser.Var, i);
		}
		public ParametersContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_parameters; }
	}

	public final ParametersContext parameters() throws RecognitionException {
		ParametersContext _localctx = new ParametersContext(_ctx, getState());
		enterRule(_localctx, 16, RULE_parameters);
		int _la;
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(74);
			_errHandler.sync(this);
			_la = _input.LA(1);
			while (_la==Can || _la==Var) {
				{
				setState(72);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,2,_ctx) ) {
				case 1:
					{
					setState(66);
					match(Can);
					setState(67);
					match(Colon);
					}
					break;
				case 2:
					{
					setState(68);
					match(Var);
					setState(69);
					match(Colon);
					}
					break;
				case 3:
					{
					setState(70);
					match(Can);
					}
					break;
				case 4:
					{
					setState(71);
					match(Var);
					}
					break;
				}
				}
				setState(76);
				_errHandler.sync(this);
				_la = _input.LA(1);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class Process_declContext extends ParserRuleContext {
		public TerminalNode Cap() { return getToken(picalculusParser.Cap, 0); }
		public List<TerminalNode> Par() { return getTokens(picalculusParser.Par); }
		public TerminalNode Par(int i) {
			return getToken(picalculusParser.Par, i);
		}
		public ParametersContext parameters() {
			return getRuleContext(ParametersContext.class,0);
		}
		public TerminalNode Pd() { return getToken(picalculusParser.Pd, 0); }
		public OperContext oper() {
			return getRuleContext(OperContext.class,0);
		}
		public Process_declContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_process_decl; }
	}

	public final Process_declContext process_decl() throws RecognitionException {
		Process_declContext _localctx = new Process_declContext(_ctx, getState());
		enterRule(_localctx, 18, RULE_process_decl);
		try {
			enterOuterAlt(_localctx, 1);
			{
			setState(77);
			match(Cap);
			setState(78);
			match(Par);
			setState(79);
			parameters();
			setState(80);
			match(Par);
			setState(81);
			match(Pd);
			setState(82);
			oper(0);
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			exitRule();
		}
		return _localctx;
	}

	public static class OperContext extends ParserRuleContext {
		public WriteContext write() {
			return getRuleContext(WriteContext.class,0);
		}
		public ReadContext read() {
			return getRuleContext(ReadContext.class,0);
		}
		public Create_chContext create_ch() {
			return getRuleContext(Create_chContext.class,0);
		}
		public If_condContext if_cond() {
			return getRuleContext(If_condContext.class,0);
		}
		public List<TerminalNode> ParA() { return getTokens(picalculusParser.ParA); }
		public TerminalNode ParA(int i) {
			return getToken(picalculusParser.ParA, i);
		}
		public List<OperContext> oper() {
			return getRuleContexts(OperContext.class);
		}
		public OperContext oper(int i) {
			return getRuleContext(OperContext.class,i);
		}
		public TerminalNode Spam() { return getToken(picalculusParser.Spam, 0); }
		public TerminalNode Cap() { return getToken(picalculusParser.Cap, 0); }
		public TerminalNode Tao() { return getToken(picalculusParser.Tao, 0); }
		public TerminalNode Dot() { return getToken(picalculusParser.Dot, 0); }
		public OperContext(ParserRuleContext parent, int invokingState) {
			super(parent, invokingState);
		}
		@Override public int getRuleIndex() { return RULE_oper; }
	}

	public final OperContext oper() throws RecognitionException {
		return oper(0);
	}

	private OperContext oper(int _p) throws RecognitionException {
		ParserRuleContext _parentctx = _ctx;
		int _parentState = getState();
		OperContext _localctx = new OperContext(_ctx, _parentState);
		OperContext _prevctx = _localctx;
		int _startState = 20;
		enterRecursionRule(_localctx, 20, RULE_oper, _p);
		try {
			int _alt;
			enterOuterAlt(_localctx, 1);
			{
			setState(99);
			_errHandler.sync(this);
			switch (_input.LA(1)) {
			case Can:
			case Iff:
			case Par:
				{
				setState(89);
				_errHandler.sync(this);
				switch ( getInterpreter().adaptivePredict(_input,4,_ctx) ) {
				case 1:
					{
					setState(85);
					write();
					}
					break;
				case 2:
					{
					setState(86);
					read();
					}
					break;
				case 3:
					{
					setState(87);
					create_ch();
					}
					break;
				case 4:
					{
					setState(88);
					if_cond();
					}
					break;
				}
				}
				break;
			case ParA:
				{
				setState(91);
				match(ParA);
				setState(92);
				oper(0);
				setState(93);
				match(ParA);
				}
				break;
			case Spam:
				{
				setState(95);
				match(Spam);
				setState(96);
				oper(3);
				}
				break;
			case Cap:
				{
				setState(97);
				match(Cap);
				}
				break;
			case Tao:
				{
				setState(98);
				match(Tao);
				}
				break;
			default:
				throw new NoViableAltException(this);
			}
			_ctx.stop = _input.LT(-1);
			setState(106);
			_errHandler.sync(this);
			_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			while ( _alt!=2 && _alt!=org.antlr.v4.runtime.atn.ATN.INVALID_ALT_NUMBER ) {
				if ( _alt==1 ) {
					if ( _parseListeners!=null ) triggerExitRuleEvent();
					_prevctx = _localctx;
					{
					{
					_localctx = new OperContext(_parentctx, _parentState);
					pushNewRecursionContext(_localctx, _startState, RULE_oper);
					setState(101);
					if (!(precpred(_ctx, 5))) throw new FailedPredicateException(this, "precpred(_ctx, 5)");
					setState(102);
					match(Dot);
					setState(103);
					oper(6);
					}
					} 
				}
				setState(108);
				_errHandler.sync(this);
				_alt = getInterpreter().adaptivePredict(_input,6,_ctx);
			}
			}
		}
		catch (RecognitionException re) {
			_localctx.exception = re;
			_errHandler.reportError(this, re);
			_errHandler.recover(this, re);
		}
		finally {
			unrollRecursionContexts(_parentctx);
		}
		return _localctx;
	}

	public boolean sempred(RuleContext _localctx, int ruleIndex, int predIndex) {
		switch (ruleIndex) {
		case 10:
			return oper_sempred((OperContext)_localctx, predIndex);
		}
		return true;
	}
	private boolean oper_sempred(OperContext _localctx, int predIndex) {
		switch (predIndex) {
		case 0:
			return precpred(_ctx, 5);
		}
		return true;
	}

	public static final ATN _ATN =
		new ATNDeserializer().deserialize(_serializedATN.toCharArray());
	static {
		_decisionToDFA = new DFA[_ATN.getNumberOfDecisions()];
		for (int i = 0; i < _ATN.getNumberOfDecisions(); i++) {
			_decisionToDFA[i] = new DFA(_ATN.getDecisionState(i), i);
		}
	}
}